# FlashCards-TUI

./: Cargo.toml  README.md
flashcards/: stolice.json  words.json
src/: app.rs  main.rs  ui.rs
src/model/: collection.rs  deck.rs  flashcard.rs  mod.rs
