[package]
name = "Projekt"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid   = { version = "1.17.0",   features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
serde_json = "1.0.140"
ratatui = "0.29.0"